--- a/helper/index.tpl.html
+++ b/helper/index.tpl.html
@@ -7,6 +7,10 @@
     <title>A project build with EBuild-Cli</title>
 </head>
 <body>
-    <div id='app'></div>
+    <div style='
+        max-width: 800px;
+        min-width: 300px;
+        margin: 20px auto;
+    ' id='app'></div>
 </body>
 </html>
